--- a/index.html
+++ b/index.html
@@ -138,57 +138,124 @@
       </div>
       </div>
     </section>
-    <section >
+    <section>
       <div class="container-fluid services_section">
-      <div class="row">
-        <div class="col-md-7 text-right services_block">
-          <h2 class="section_heading right_red_border services_heading">Our services</h2>
-          <div class="row service_item">
-            <div class="col service_item_text">
-              <h3 class="service_item_heading">Web design</h3>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.  Lorem Ip sum has been the industry's standard dummy text ever.</p>
+        <div class="row">
+          <div class="col-md-7 text-right services_block">
+            <h2 class="section_heading right_red_border services_heading">Our services</h2>
+            <div class="row service_item">
+              <div class="col service_item_text">
+                <h3 class="service_item_heading">Web design</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.  Lorem Ip sum has been the industry's standard dummy text ever.</p>
+              </div>
+              <div class="service_item_icon_box">
+                <div class="circle_decorative">
+                  <img class="circle_decorative_icon" src="img/service_icon_3.png" alt="service_icon_2">
+                </div>
+              </div>
             </div>
-            <div class="service_item_icon_box">
-              <div class="circle_decorative">
-                <img class="circle_decorative_icon" src="img/service_icon_3.png" alt="service_icon_2">
+            <div class="row service_item">
+              <div class="col service_item_text">
+                <h3 class="service_item_heading">Print design</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.  Lorem Ip sum has been the industry's standard dummy text ever.</p>
+              </div>
+              <div class="service_item_icon_box">
+                <div class="circle_decorative">
+                  <img class="circle_decorative_icon" src="img/service_icon_3.png" alt="service_icon_2">
+                </div>
+              </div>
+            </div>
+            <div class="row service_item">
+              <div class="col service_item_text">
+                <h3 class="service_item_heading">Photography</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.  Lorem Ip sum has been the industry's standard dummy text ever.</p>
+              </div>
+              <div class="service_item_icon_box">
+                <div class="circle_decorative">
+                  <img class="circle_decorative_icon" src="img/service_icon_3.png" alt="service_icon_2">
+                </div>
               </div>
             </div>
           </div>
-          <div class="row service_item">
-            <div class="col service_item_text">
-              <h3 class="service_item_heading">Print design</h3>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.  Lorem Ip sum has been the industry's standard dummy text ever.</p>
-            </div>
-            <div class="service_item_icon_box">
-              <div class="circle_decorative">
-                <img class="circle_decorative_icon" src="img/service_icon_3.png" alt="service_icon_2">
-              </div>
-            </div>
-          </div>
-          <div class="row service_item">
-            <div class="col service_item_text">
-              <h3 class="service_item_heading">Photography</h3>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.  Lorem Ip sum has been the industry's standard dummy text ever.</p>
-            </div>
-            <div class="service_item_icon_box">
-              <div class="circle_decorative">
-                <img class="circle_decorative_icon" src="img/service_icon_3.png" alt="service_icon_2">
-              </div>
-            </div>
+          <div class="col-md-5 services_block_image" style="background-image: url('img/services_bg.jpg');">
           </div>
         </div>
-        <div class="col-md-5 services_block_image" style="background-image: url('img/services_bg.jpg');">
-        </div>
-      </div>
       </div>
     </section>
     <section >
       <div class="container-fluid works_section">
-      <div class="row">
-        <div class="col-md-12">
-          
+        <div class="row">
+          <div class="col-12">
+              <div class="portfolio_header text-center">
+                <h2 class="section_heading">Recent Works</h2>
+                <p>It has survived not only five centuries, but also the leap scrambled it to make a type.</p>
+                <div class="title_dot"></div>
+              </div>
+          </div>
         </div>
-      </div>
+        <div class="row">
+          <div class="col-12 text-center">
+              <div class="portfolio_menu text-center">
+                <span>ALL</span>
+                <span>PRINT DESIGN</span>
+                <span>ANIMATION</span>
+                <span>ART</span>
+                <span>WEB DESIGN</span>
+                <span>PHOTOGRAPHY</span>
+                <span>VIDEO</span>
+              </div>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background: url("img/works_item_1.png")'>
+            <div class="portfolio_item_text">
+              <h3 class="portfolio_item_heading top_red_border">T-SHIRT DESIGN</h3>
+              <p>art / t-shirt</p>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background: url("img/works_item_2.png")'>
+            <div class="portfolio_item_text">
+              <h3 class="portfolio_item_heading top_red_border">T-SHIRT DESIGN</h3>
+              <p>art / t-shirt</p>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background: url("img/works_item_3.png")'>
+            <div class="portfolio_item_text">
+              <h3 class="portfolio_item_heading top_red_border">T-SHIRT DESIGN</h3>
+              <p>art / t-shirt</p>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background: url("img/works_item_4.png")'>
+            <div class="portfolio_item_text">
+              <h3 class="portfolio_item_heading top_red_border">T-SHIRT DESIGN</h3>
+              <p>art / t-shirt</p>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background: url("img/works_item_5.png")'>
+            <div class="portfolio_item_text">
+              <h3 class="portfolio_item_heading top_red_border">T-SHIRT DESIGN</h3>
+              <p>art / t-shirt</p>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background: url("img/works_item_6.png")'>
+            <div class="portfolio_item_text">
+              <h3 class="portfolio_item_heading top_red_border">T-SHIRT DESIGN</h3>
+              <p>art / t-shirt</p>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background: url("img/works_item_7.png")'>
+            <div class="portfolio_item_text">
+              <h3 class="portfolio_item_heading top_red_border">T-SHIRT DESIGN</h3>
+              <p>art / t-shirt</p>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background: url("img/works_item_8.png")'>
+            <div class="portfolio_item_text">
+              <h3 class="portfolio_item_heading top_red_border">T-SHIRT DESIGN</h3>
+              <p>art / t-shirt</p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <section>
