--- a/index.html
+++ b/index.html
@@ -209,50 +209,50 @@
         <div class="row justify-content-center">
           <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background: url("img/works_item_1.png")'>
             <div class="portfolio_item_text">
-              <h3 class="portfolio_item_heading top_red_border">T-SHIRT DESIGN</h3>
-              <p>art / t-shirt</p>
+              <h3 class="portfolio_item_heading">T-SHIRT DESIGN</h3>
+              <div class="portfolio_item_desc">art / t-shirt</div>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background: url("img/works_item_2.png")'>
             <div class="portfolio_item_text">
-              <h3 class="portfolio_item_heading top_red_border">T-SHIRT DESIGN</h3>
-              <p>art / t-shirt</p>
+              <h3 class="portfolio_item_heading">T-SHIRT DESIGN</h3>
+              <div class="portfolio_item_desc">art / t-shirt</div>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background: url("img/works_item_3.png")'>
             <div class="portfolio_item_text">
-              <h3 class="portfolio_item_heading top_red_border">T-SHIRT DESIGN</h3>
-              <p>art / t-shirt</p>
+              <h3 class="portfolio_item_heading">T-SHIRT DESIGN</h3>
+              <div class="portfolio_item_desc">art / t-shirt</div>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background: url("img/works_item_4.png")'>
             <div class="portfolio_item_text">
-              <h3 class="portfolio_item_heading top_red_border">T-SHIRT DESIGN</h3>
-              <p>art / t-shirt</p>
+              <h3 class="portfolio_item_heading">T-SHIRT DESIGN</h3>
+              <div class="portfolio_item_desc">art / t-shirt</div>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background: url("img/works_item_5.png")'>
             <div class="portfolio_item_text">
-              <h3 class="portfolio_item_heading top_red_border">T-SHIRT DESIGN</h3>
-              <p>art / t-shirt</p>
+              <h3 class="portfolio_item_heading">T-SHIRT DESIGN</h3>
+              <div class="portfolio_item_desc">art / t-shirt</div>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background: url("img/works_item_6.png")'>
             <div class="portfolio_item_text">
-              <h3 class="portfolio_item_heading top_red_border">T-SHIRT DESIGN</h3>
-              <p>art / t-shirt</p>
+              <h3 class="portfolio_item_heading">T-SHIRT DESIGN</h3>
+              <div class="portfolio_item_desc">art / t-shirt</div>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background: url("img/works_item_7.png")'>
             <div class="portfolio_item_text">
-              <h3 class="portfolio_item_heading top_red_border">T-SHIRT DESIGN</h3>
-              <p>art / t-shirt</p>
+              <h3 class="portfolio_item_heading">T-SHIRT DESIGN</h3>
+              <div class="portfolio_item_desc">art / t-shirt</div>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background: url("img/works_item_8.png")'>
             <div class="portfolio_item_text">
-              <h3 class="portfolio_item_heading top_red_border">T-SHIRT DESIGN</h3>
-              <p>art / t-shirt</p>
+              <h3 class="portfolio_item_heading">T-SHIRT DESIGN</h3>
+              <div class="portfolio_item_desc">art / t-shirt</div>
             </div>
           </div>
         </div>
