--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
       </div>
     </section>
-    <section >
+    <section>
       <div class="container features_section">
         <div class="row justify-content-center text-center">
           <div class="col-md-3 col-sm-6 features_item">
@@ -121,7 +121,7 @@
         </div>
       </div>
     </section>
-    <section >
+    <section>
       <div class="container history_section">
       <div class="row">
         <div class="col-md-5">
@@ -150,7 +150,7 @@
               </div>
               <div class="service_item_icon_box">
                 <div class="circle_decorative">
-                  <img class="circle_decorative_icon" src="img/service_icon_3.png" alt="service_icon_2">
+                  <img class="circle_decorative_icon" src="img/service_icon_1.png" alt="service_icon_2">
                 </div>
               </div>
             </div>
@@ -161,7 +161,7 @@
               </div>
               <div class="service_item_icon_box">
                 <div class="circle_decorative">
-                  <img class="circle_decorative_icon" src="img/service_icon_3.png" alt="service_icon_2">
+                  <img class="circle_decorative_icon" src="img/service_icon_2.png" alt="service_icon_2">
                 </div>
               </div>
             </div>
@@ -182,7 +182,7 @@
         </div>
       </div>
     </section>
-    <section >
+    <section>
       <div class="container-fluid works_section">
         <div class="row">
           <div class="col-12">
@@ -267,7 +267,7 @@
       </div>
       </div>
     </section>
-    <section >
+    <section>
       <div class="container-fluid numbers_section" style="background-image: url('img/numbers_bg.jpg');">
       <div class="row justify-content-center text-center">
         <div class="col">
@@ -338,13 +338,79 @@
       </div>
       </div>
     </section>
-    <section >
+    <section>
       <div class="container price_section">
-      <div class="row">
-        <div class="col-md-12">
-          
+        <div class="row">
+          <div class="col-12">
+              <div class="price_header text-center">
+                <h2 class="section_heading">Our pricing</h2>
+                <p>A 30 days free trial for all. A brief story about how this process works, keep an eye till the end.</p>
+                <div class="title_dot"></div>
+              </div>
+          </div>
         </div>
-      </div>
+        <div class="row">
+          <div class="col-lg-4 col-md-6 price_item">
+            <div class="price_item_header">
+              <h3>Starter</h3>
+              <div class="price_item_icon_box">
+                <div class="circle_decorative">
+                  <div class="circle_price">&#36;19<br>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="price_item_footer">
+              <ul>
+                <li>Competition Analysis Methods</li>
+                <li>All Ranked URLs</li>
+                <li>International Support System</li>
+                <li>Social Media Tracking</li>
+              </ul>
+              <button class="button first_button">Choose plan</button>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 price_item">
+            <div class="price_item_header">
+              <h3>Premium</h3>
+              <div class="price_item_icon_box">
+                <div class="circle_decorative">
+                  <div class="circle_price">&#36;19<br>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="price_item_footer">
+              <ul>
+                <li>Competition Analysis Methods</li>
+                <li>All Ranked URLs</li>
+                <li>International Support System</li>
+                <li>Social Media Tracking</li>
+              </ul>
+              <button class="button first_button">Choose plan</button>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 price_item">
+            <div class="price_item_header">
+              <h3>Business</h3>
+              <div class="price_item_icon_box">
+                <div class="circle_decorative">
+                  <div class="circle_price">&#36;19<br>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="price_item_footer">
+              <ul>
+                <li>Competition Analysis Methods</li>
+                <li>All Ranked URLs</li>
+                <li>International Support System</li>
+                <li>Social Media Tracking</li>
+              </ul>
+              <button class="button first_button">Choose plan</button>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <section>
