--- a/index.html
+++ b/index.html
@@ -207,49 +207,49 @@
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background: url("img/works_item_1.png")'>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background-image: url("img/works_item_1.png")'>
             <div class="portfolio_item_text">
               <h3 class="portfolio_item_heading">T-SHIRT DESIGN</h3>
               <div class="portfolio_item_desc">art / t-shirt</div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background: url("img/works_item_2.png")'>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background-image: url("img/works_item_2.png")'>
             <div class="portfolio_item_text">
               <h3 class="portfolio_item_heading">T-SHIRT DESIGN</h3>
               <div class="portfolio_item_desc">art / t-shirt</div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background: url("img/works_item_3.png")'>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background-image: url("img/works_item_3.png")'>
             <div class="portfolio_item_text">
               <h3 class="portfolio_item_heading">T-SHIRT DESIGN</h3>
               <div class="portfolio_item_desc">art / t-shirt</div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background: url("img/works_item_4.png")'>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background-image: url("img/works_item_4.png")'>
             <div class="portfolio_item_text">
               <h3 class="portfolio_item_heading">T-SHIRT DESIGN</h3>
               <div class="portfolio_item_desc">art / t-shirt</div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background: url("img/works_item_5.png")'>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background-image: url("img/works_item_5.png")'>
             <div class="portfolio_item_text">
               <h3 class="portfolio_item_heading">T-SHIRT DESIGN</h3>
               <div class="portfolio_item_desc">art / t-shirt</div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background: url("img/works_item_6.png")'>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background-image: url("img/works_item_6.png")'>
             <div class="portfolio_item_text">
               <h3 class="portfolio_item_heading">T-SHIRT DESIGN</h3>
               <div class="portfolio_item_desc">art / t-shirt</div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background: url("img/works_item_7.png")'>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background-image: url("img/works_item_7.png")'>
             <div class="portfolio_item_text">
               <h3 class="portfolio_item_heading">T-SHIRT DESIGN</h3>
               <div class="portfolio_item_desc">art / t-shirt</div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background: url("img/works_item_8.png")'>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background-image: url("img/works_item_8.png")'>
             <div class="portfolio_item_text">
               <h3 class="portfolio_item_heading">T-SHIRT DESIGN</h3>
               <div class="portfolio_item_desc">art / t-shirt</div>
@@ -456,19 +456,89 @@
                 </div>
             </div>
           </div>
-          <div class="d-flex flex-row justify-content-between align-items-center">
-            <div class="partner_item"><img src="img/partners/partners_1.png" alt="partners_1" class="img img-fluid"></div>
-            <div class="partner_item"><img src="img/partners/partners_2.png" alt="partners_2" class="img img-fluid"></div>
-            <div class="partner_item"><img src="img/partners/partners_3.png" alt="partners_3" class="img img-fluid"></div>
-            <div class="partner_item"><img src="img/partners/partners_4.png" alt="partners_4" class="img img-fluid"></div>
-            <div class="partner_item"><img src="img/partners/partners_5.png" alt="partners_5" class="img img-fluid"></div>
+          <div class="row justify-content-around">
+            <div class="partner_item col-md-2 col-4">
+              <div class="normal_img">
+                <img src="img/partners/partners_1.png" alt="partners_1" class="img img-fluid">
+              </div>
+              <div class="grey_img">
+                <img src="img/partners/partners_1g.png" alt="partners_1g" class="img img-fluid">
+              </div>
+            </div>
+            <div class="partner_item col-md-2 col-4">
+              <div class="normal_img">
+                <img src="img/partners/partners_2.png" alt="partners_2" class="img img-fluid">
+              </div>
+              <div class="grey_img">
+                <img src="img/partners/partners_2g.png" alt="partners_2g" class="img img-fluid">
+              </div>
+            </div>
+            <div class="partner_item col-md-2 col-4">
+              <div class="normal_img">
+                <img src="img/partners/partners_3.png" alt="partners_3" class="img img-fluid">
+              </div>
+              <div class="grey_img">
+                <img src="img/partners/partners_3g.png" alt="partners_3g" class="img img-fluid">
+              </div>
+            </div>
+            <div class="partner_item col-md-2 col-4">
+              <div class="normal_img">
+                <img src="img/partners/partners_4.png" alt="partners_4" class="img img-fluid">
+              </div>
+              <div class="grey_img">
+                <img src="img/partners/partners_4g.png" alt="partners_4g" class="img img-fluid">
+              </div>
+            </div>
+            <div class="partner_item col-md-2 col-4">
+              <div class="normal_img">
+                <img src="img/partners/partners_5.png" alt="partners_5" class="img img-fluid">
+              </div>
+              <div class="grey_img">
+                <img src="img/partners/partners_5g.png" alt="partners_5g" class="img img-fluid">
+              </div>
+            </div>
           </div>
-          <div class="d-flex flex-row justify-content-between align-items-center">
-            <div class="partner_item"><img src="img/partners/partners_1.png" alt="partners_1" class="img img-fluid"></div>
-            <div class="partner_item"><img src="img/partners/partners_2.png" alt="partners_2" class="img img-fluid"></div>
-            <div class="partner_item"><img src="img/partners/partners_3.png" alt="partners_3" class="img img-fluid"></div>
-            <div class="partner_item"><img src="img/partners/partners_4.png" alt="partners_4" class="img img-fluid"></div>
-            <div class="partner_item"><img src="img/partners/partners_5.png" alt="partners_5" class="img img-fluid"></div>
+          <div class="row justify-content-around">
+            <div class="partner_item col-md-2 col-4">
+              <div class="normal_img">
+                <img src="img/partners/partners_1.png" alt="partners_1" class="img img-fluid">
+              </div>
+              <div class="grey_img">
+                <img src="img/partners/partners_1g.png" alt="partners_1g" class="img img-fluid">
+              </div>
+            </div>
+            <div class="partner_item col-md-2 col-4">
+              <div class="normal_img">
+                <img src="img/partners/partners_2.png" alt="partners_2" class="img img-fluid">
+              </div>
+              <div class="grey_img">
+                <img src="img/partners/partners_2g.png" alt="partners_2g" class="img img-fluid">
+              </div>
+            </div>
+            <div class="partner_item col-md-2 col-4">
+              <div class="normal_img">
+                <img src="img/partners/partners_3.png" alt="partners_3" class="img img-fluid">
+              </div>
+              <div class="grey_img">
+                <img src="img/partners/partners_3g.png" alt="partners_3g" class="img img-fluid">
+              </div>
+            </div>
+            <div class="partner_item col-md-2 col-4">
+              <div class="normal_img">
+                <img src="img/partners/partners_4.png" alt="partners_4" class="img img-fluid">
+              </div>
+              <div class="grey_img">
+                <img src="img/partners/partners_4g.png" alt="partners_4g" class="img img-fluid">
+              </div>
+            </div>
+            <div class="partner_item col-md-2 col-4">
+              <div class="normal_img">
+                <img src="img/partners/partners_5.png" alt="partners_5" class="img img-fluid">
+              </div>
+              <div class="grey_img">
+                <img src="img/partners/partners_5g.png" alt="partners_5g" class="img img-fluid">
+              </div>
+            </div>
           </div>
         </div>
       </div>
