team timeline block

--- a/index.html
+++ b/index.html
@@ -426,22 +426,41 @@
     </section>
     <section>
       <div class="team_section">
-        <div class="container">
-          <div class="row">
-            <div class="col-12">
-                <div class="text-center">
-                  <h2 class="section_heading">Our team</h2>
-                  <p>Meet the craziest team. Share your thoughts with them.</p>
-                  <div class="title_dot"></div>
-                </div>
+          <div class="text-center">
+            <h2 class="section_heading">Our team</h2>
+            <p>Meet the craziest team. Share your thoughts with them.</p>
+            <div class="title_dot"></div>
+          </div>
+          <div class="timeline">
+            <svg 
+             xmlns="http://www.w3.org/2000/svg"
+             xmlns:xlink="http://www.w3.org/1999/xlink"
+             height="100%" width="100%" viewBox="0 0 1928 652"
+            preserveAspectRatio="none"
+             >
+              <path fill-rule="evenodd"  stroke="rgb(231, 76, 60)" stroke-width="3px" stroke-linecap="butt" stroke-linejoin="miter" fill="none"
+               d="M1.500,512.500 C1.500,512.500 619.000,232.887 1095.500,343.500 C1572.000,454.112 1909.000,51.330 1923.500,1.500 "/>
+              <path fill-rule="evenodd"  opacity="0.102" fill="rgb(231, 76, 60)"
+               d="M1922.000,3.000 C1907.500,52.830 1570.500,455.612 1094.000,345.000 C617.500,234.387 -0.000,514.000 -0.000,514.000 L-0.000,651.499 L1920.000,651.499 C1920.000,651.499 1936.500,-46.831 1922.000,3.000 Z"/>
+            </svg>
+            <div class="timeline_items">
+              <div class="timeline_item timeline_item_1">
+                <img src="img/timeline_item_1.jpg" alt="timeline_item_1">
+              </div>
+              <div class="timeline_item timeline_item_2">
+                <img src="img/timeline_item_2.jpg" alt="timeline_item_1">
+              </div>
+              <div class="timeline_item timeline_item_3">
+                <img src="img/timeline_item_3.jpg" alt="timeline_item_1">
+              </div>
+              <div class="timeline_item timeline_item_4">
+                <img src="img/timeline_item_4.jpg" alt="timeline_item_1">
+              </div>
+              <div class="timeline_item timeline_item_5">
+                <img src="img/timeline_item_5.jpg" alt="timeline_item_1">
+              </div>
             </div>
           </div>
-          <div class="row">
-            <div class="col-md-12">
-              
-            </div>
-          </div>
-        </div>
       </div>
     </section>
     <section>
@@ -545,19 +564,53 @@
     </section>
     <section>
       <div class="blog_section">
-        <div class="container">
+        <div class="container-fluid">
           <div class="row">
             <div class="col-12">
                 <div class="text-center">
                   <h2 class="section_heading">Our blog</h2>
-                  <p>Suspendisse sed eros mollis, tincidunt felis eget, interdum eratullam sit amet odio.</p>
+                  <p class="section_subheading">Suspendisse sed eros mollis, tincidunt felis eget, interdum eratullam sit amet odio.</p>
                   <div class="title_dot"></div>
                 </div>
             </div>
           </div>
-          <div class="row">
-            <div class="col-md-12">
-              
+          <div class="row blog_block">
+            <div class="col-md-6 blog_item">
+                <div class="blog_item_image" style="background-image: url('img/blog_item_1.jpg');">
+                </div>
+                <div class="blog_item_text">
+                  <span class="blog_item_category">art / t-shirt</span>
+                  <h3 class="blog_item_heading">T-SHIRT DESIGN</h3>
+                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu Stry's standard dummy text ever since the 1500s, an unknown printer took a galley of type a scrambled it to make a type specimen book.</p>
+                  <a href="#">Read More &gt;&gt;</a>
+                </div>
+            </div>
+            <div class="col-md-6 blog_item">
+                <div class="blog_item_image" style="background-image: url('img/blog_item_2.jpg');"></div>
+                <div class="blog_item_text">
+                  <span class="blog_item_category">art / t-shirt</span>
+                  <h3 class="blog_item_heading">T-SHIRT DESIGN</h3>
+                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu Stry's standard dummy text ever since the 1500s, an unknown printer took a galley of type a scrambled it to make a type specimen book.</p>
+                  <a href="#">Read More &gt;&gt;</a>
+                </div>
+            </div>
+            <div class="col-md-6 blog_item">
+                <div class="blog_item_image" style="background-image: url('img/blog_item_3.jpg');"></div>
+                <div class="blog_item_text">
+                  <span class="blog_item_category">art / t-shirt</span>
+                  <h3 class="blog_item_heading">T-SHIRT DESIGN</h3>
+                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu Stry's standard dummy text ever since the 1500s, an unknown printer took a galley of type a scrambled it to make a type specimen book.</p>
+                  <a href="#">Read More &gt;&gt;</a>
+                </div>
+            </div>
+            <div class="col-md-6 blog_item">
+                <div class="blog_item_image" style="background-image: url('img/blog_item_4.jpg');"></div>
+                <div class="blog_item_text">
+                  <span class="blog_item_category">art / t-shirt</span>
+                  <h3 class="blog_item_heading">T-SHIRT DESIGN</h3>
+                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu Stry's standard dummy text ever since the 1500s, an unknown printer took a galley of type a scrambled it to make a type specimen book.</p>
+                  <a href="#">Read More &gt;&gt;</a>
+                </div>
             </div>
           </div>
         </div>
