blog triangles on small scr

--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
       <div class="team_section">
           <div class="text-center">
             <h2 class="section_heading">Our team</h2>
-            <p>Meet the craziest team. Share your thoughts with them.</p>
+            <p class="section_subheading">Meet the craziest team. Share your thoughts with them.</p>
             <div class="title_dot"></div>
           </div>
           <div class="timeline">
@@ -446,18 +446,38 @@
             <div class="timeline_items">
               <div class="timeline_item timeline_item_1">
                 <img src="img/timeline_item_1.jpg" alt="timeline_item_1">
+                <div class="timeline_item_text">
+                  <h4>Kazi Erfan</h4>
+                  <p>UI/UX Designer</p>
+                </div>
               </div>
               <div class="timeline_item timeline_item_2">
-                <img src="img/timeline_item_2.jpg" alt="timeline_item_1">
+                <img src="img/timeline_item_2.jpg" alt="timeline_item_2">
+                <div class="timeline_item_text">
+                  <h4>Kazi Erfan</h4>
+                  <p>UI/UX Designer</p>
+                </div>
               </div>
               <div class="timeline_item timeline_item_3">
-                <img src="img/timeline_item_3.jpg" alt="timeline_item_1">
+                <img src="img/timeline_item_3.jpg" alt="timeline_item_3">
+                <div class="timeline_item_text">
+                  <h4>Kazi Erfan</h4>
+                  <p>UI/UX Designer</p>
+                </div>
               </div>
               <div class="timeline_item timeline_item_4">
-                <img src="img/timeline_item_4.jpg" alt="timeline_item_1">
+                <img src="img/timeline_item_4.jpg" alt="timeline_item_4">
+                <div class="timeline_item_text">
+                  <h4>Kazi Erfan</h4>
+                  <p>UI/UX Designer</p>
+                </div>
               </div>
               <div class="timeline_item timeline_item_5">
-                <img src="img/timeline_item_5.jpg" alt="timeline_item_1">
+                <img src="img/timeline_item_5.jpg" alt="timeline_item_5">
+                <div class="timeline_item_text">
+                  <h4>Kazi Erfan</h4>
+                  <p>UI/UX Designer</p>
+                </div>
               </div>
             </div>
           </div>
@@ -579,36 +599,44 @@
                 <div class="blog_item_image" style="background-image: url('img/blog_item_1.jpg');">
                 </div>
                 <div class="blog_item_text">
-                  <span class="blog_item_category">art / t-shirt</span>
+                  <a class="blog_item_category" href="#">art / t-shirt</a>
                   <h3 class="blog_item_heading">T-SHIRT DESIGN</h3>
-                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu Stry's standard dummy text ever since the 1500s, an unknown printer took a galley of type a scrambled it to make a type specimen book.</p>
+                  <div class="blog_item_text_box">
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu Stry's standard dummy text ever since the 1500s, an unknown printer took a galley of type a scrambled it to make a type specimen book.</p>
+                  </div>
                   <a href="#">Read More &gt;&gt;</a>
                 </div>
             </div>
             <div class="col-md-6 blog_item">
                 <div class="blog_item_image" style="background-image: url('img/blog_item_2.jpg');"></div>
                 <div class="blog_item_text">
-                  <span class="blog_item_category">art / t-shirt</span>
+                  <a class="blog_item_category" href="#">art / t-shirt</a>
                   <h3 class="blog_item_heading">T-SHIRT DESIGN</h3>
-                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu Stry's standard dummy text ever since the 1500s, an unknown printer took a galley of type a scrambled it to make a type specimen book.</p>
+                  <div class="blog_item_text_box">
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu Stry's standard dummy text ever since the 1500s, an unknown printer took a galley of type a scrambled it to make a type specimen book.</p>
+                  </div>
                   <a href="#">Read More &gt;&gt;</a>
                 </div>
             </div>
             <div class="col-md-6 blog_item">
                 <div class="blog_item_image" style="background-image: url('img/blog_item_3.jpg');"></div>
                 <div class="blog_item_text">
-                  <span class="blog_item_category">art / t-shirt</span>
+                  <a class="blog_item_category" href="#">art / t-shirt</a>
                   <h3 class="blog_item_heading">T-SHIRT DESIGN</h3>
-                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu Stry's standard dummy text ever since the 1500s, an unknown printer took a galley of type a scrambled it to make a type specimen book.</p>
+                  <div class="blog_item_text_box">
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu Stry's standard dummy text ever since the 1500s, an unknown printer took a galley of type a scrambled it to make a type specimen book.</p>
+                  </div>
                   <a href="#">Read More &gt;&gt;</a>
                 </div>
             </div>
             <div class="col-md-6 blog_item">
                 <div class="blog_item_image" style="background-image: url('img/blog_item_4.jpg');"></div>
                 <div class="blog_item_text">
-                  <span class="blog_item_category">art / t-shirt</span>
+                  <a class="blog_item_category" href="#">art / t-shirt</a>
                   <h3 class="blog_item_heading">T-SHIRT DESIGN</h3>
-                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu Stry's standard dummy text ever since the 1500s, an unknown printer took a galley of type a scrambled it to make a type specimen book.</p>
+                  <div class="blog_item_text_box">
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu Stry's standard dummy text ever since the 1500s, an unknown printer took a galley of type a scrambled it to make a type specimen book.</p>
+                  </div>
                   <a href="#">Read More &gt;&gt;</a>
                 </div>
             </div>
