Blog triangles sm

--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
                   <div class="blog_item_text_box">
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu Stry's standard dummy text ever since the 1500s, an unknown printer took a galley of type a scrambled it to make a type specimen book.</p>
                   </div>
-                  <a href="#">Read More &gt;&gt;</a>
+                  <a class="read_more" href="#">Read More &gt;&gt;</a>
                 </div>
             </div>
             <div class="col-md-6 blog_item">
